memory issue and dragging

--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
   </head>
   <body>
     <canvas id="selfie" width=640 height=480></canvas>
+
+
+    <div id="draggable" class="ui-widget-content">
+        <p id="one">YOUR</p>
+        <p id="two">BIG</p>
+        <p id="three">FACE</p>
+        <p id="four">@newpublicart</p>
+      </div>
     <script type="text/javascript" src="libs/jquery-1.10.1.min.js"></script>
+    <script type="text/javascript" src="libs/jquery-ui.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
