--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <p id="three">FACE</p>
         <p id="four">@newpublicart</p>
       </div>
+      <a id="download" download="yourbigface.png"></a>
     <script type="text/javascript" src="libs/jquery-1.10.1.min.js"></script>
     <script type="text/javascript" src="libs/jquery-ui.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
